@@ -112,10 +112,10 @@ keys=file_main, file_error
 [multiproc_handler_file_error]
 class=FileHandler
 level=ERROR
-args=('$temp$traj/$env/$run_$proc_ERROR.txt',)
+args=('$temp$traj/$env/$run_$host_$proc_ERROR.txt',)
 formatter=file
 
 [multiproc_handler_file_main]
 class=FileHandler
-args=('$temp$traj/$env/$run_$proc_LOG.txt',)
+args=('$temp$traj/$env/$run_$host_$proc_LOG.txt',)
 formatter=file
